1.6.4
-----
1. Fix Claws Mail listview headers.
2. When drawing text on an option menu, look deeper into parent heirarchy to
   determine if the label is on a GtkOptionMenu.

1.6.3
-----
1. Apply background opacity to menubars and toolbars.
2. Always use text colours when drawing labels on a GtkOptionMenu.
3. If using background opacity, draw rings and background gradient under
   menubars and toolbars - this matches the KDE4 behaviour.
4. Disable the support for 'fix parent-less dialog' option - this causes too many
   issues with applications to be worth the fuss. If you really want this enabled,
   use the -DQTC_ENABLE_PARENTLESS_DIALOG_FIX_SUPPORT=true cmake option.

1.6.2
-----
1. Theme evolution's headers as headers, and not buttons.
2. Set fallback icon theme to gnome instead of hicolor. This helps with some
   missing icons in evolution.
3. If drawing a background image, ensure that this can also be drawn onto kwin
   border - if it has a bottom edge.
4. Attempt to fix light text on dark background for OpenOffice.org
5. Use same radius for all corners of progressbar.
6. Apply menu background settings to menus of non-editable combos. (Rounding is
   not applied due to clipping/shadow issues with Gtk2)
7. Allow borderless rounded popup menus.
8. Don't draw double focus on Gimp combos.
9. Allow rounded menus when rounding is set to slight.

1.6.1
-----
1. Add option to have rounded popup menus.
2. Allow rounded tooltips when not compositing.
3. Use a hack to re-enable shadows for rounded tooltips.
4. Don't map/unmap tooltips - not required?.
5. Fix kwin titlebar blending for striped backgrounds.
6. Use flat selection for items of editable combo - matches KDE4 better.
7. Simplify faded menu item code.
8. Dont use gtk_style_apply_default_background for resize widgets - messes up
   translucency!

1.6.0
-----
 1. Add 'glow' focus option - this is now the default. (Note, for firefox
    the label of checkboxes and radiobuttons will have a rounded focus rect